error.txt
kwon@raspberrypi:~/real_real/System-Programming-OctaFlip/hw3_202311160 $ g++ -Iinclude -Ilibs/rpi-rgb-led-matrix/include main.c src/server.c src/client.c src/json.c src/game.c src/board.c libs/cJSON.c -Llibs/rpi-rgb-led-matrix/lib -lrgbmatrix -lpthread -lrt -o hw3
main.c: In function ‘int main(int, char**)’:
main.c:86:30: error: invalid conversion from ‘void*’ to ‘char**’ [-fpermissive]
   86 |             led_argv = malloc(sizeof(char *) * led_argc);
      |                        ~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~
      |                              |
      |                              void*
src/client.c: In function ‘int client_run(const char*, const char*, const char*)’:
src/client.c:67:35: error: too many arguments to function ‘int connect_to_server(const char*, const char*)’
   67 |     int sockfd = connect_to_server(server_ip, server_port, username);
      |                  ~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from src/client.c:3:
src/../include/client.h:7:12: note: declared here
    7 | static int connect_to_server(const char *ip, const char *port);
      |            ^~~~~~~~~~~~~~~~~
src/client.c:132:56: error: taking address of temporary array
  132 |             cJSON *jfrom = cJSON_CreateIntArray((int[]){r1, c1}, 2);
      |                                                        ^~~~~~~~
src/client.c:133:56: error: taking address of temporary array
  133 |             cJSON *jto   = cJSON_CreateIntArray((int[]){r2, c2}, 2);
      |                                                        ^~~~~~~~
src/../include/client.h: At global scope:
src/../include/client.h:7:12: warning: ‘int connect_to_server(const char*, const char*)’ used but never defined
    7 | static int connect_to_server(const char *ip, const char *port);
